--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "build": "webpack --mode production --config webpack.prod.js",
     "serve": "node server.js",
     "start": "webpack serve --open --config webpack.dev.js",
@@ -19,11 +19,13 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "css-loader": "^6.7.2",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
@@ -36,6 +38,7 @@
     "lodash": "^4.17.21",
     "polished": "^4.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-inlinesvg": "^3.0.1"
   }
 }
