--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "webpack --mode production --config webpack.prod.js",
     "serve": "node server.js",
     "start": "webpack serve --open --config webpack.dev.js",
-    "analyze": "webpack --mode production --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json",
-    "analyze-dev": "webpack --mode development --config webpack.dev.js --profile --json > stats.json && webpack-bundle-analyzer stats.json"
+    "analyze": "webpack --mode production --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json build",
+    "analyze-dev": "webpack --mode development --config webpack.dev.js --profile --json > stats.json && webpack-bundle-analyzer stats.json build"
   },
   "keywords": [],
   "author": "",
@@ -19,15 +19,23 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "css-loader": "^6.7.2",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.8.1",
     "jest": "^29.3.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
+    "svgo": "^3.0.2",
+    "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.0",
@@ -36,7 +44,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^3.0.1"
